Add request priority management at SpiceManager level. Tested. Issue #99 solved.